# openMINDS_Python

./: .gitignore  CHANGELOG.md  LICENSE  README.md  build.py  codemeta.json  pyproject.toml  requirements.txt
.github/workflows/: build-dev.yml  build.yml  test.yml
openMINDS.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
openminds/: __init__.py  base.py  collection.py  properties.py  registry.py
openminds/latest/: __init__.py
openminds/latest/chemicals/: __init__.py  amount_of_chemical.py  chemical_mixture.py  chemical_substance.py  product_source.py
openminds/latest/computation/: __init__.py  data_analysis.py  data_copy.py  environment.py  generic_computation.py  hardware_system.py  launch_configuration.py  local_file.py  model_validation.py  optimization.py  simulation.py  software_agent.py  validation_test.py  validation_test_version.py  visualization.py  workflow_execution.py  workflow_recipe.py  workflow_recipe_version.py
openminds/latest/controlled_terms/: __init__.py  action_status_type.py  age_category.py  analysis_technique.py  anatomical_axes_orientation.py  anatomical_identification_type.py  anatomical_plane.py  annotation_criteria_type.py  annotation_type.py  atlas_type.py  (+72 more)
openminds/v1/: __init__.py
openminds/v2_0/: __init__.py
pipeline/: translator.py  utils.py
pipeline/src/: README.md  base.py  codemeta.json  collection.py  init_template.py.txt  module_template.py.txt  properties.py  pyproject_template.toml.txt  registry.py
pipeline/tests/: test_collections.py  test_instantiation.py  test_regressions.py  utils.py
(+1235 files in other folders)
